--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,8 @@
 platform = espressif32
 board = wemos_d1_uno32
 framework = arduino
+
 monitor_speed = 115200
+monitor_filters = send_on_enter
+
 lib_extra_dirs = ~/Arduino/libraries
