feat: serialize json before mqtt publish

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 monitor_speed = 115200
 monitor_filters = send_on_enter
 lib_extra_dirs = ~/Arduino/libraries
+lib_deps = bblanchon/ArduinoJson@^7.4.2
 platform_packages = platformio/tool-esptoolpy@^2.40900.250804
